--- a/index.html
+++ b/index.html
@@ -3,15 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>service-direct-go</title>
-    
-
-    <meta property="og:title" content="service-direct-go" />
-  
-
-    
+    <title>Service Direct Go</title>
+    <meta property="og:title" content="Service Direct Go" />
   </head>
-
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
